# mysha256

./: README.md  meson.build
src/: boxes.cpp  boxes.hh  constants.hh  hash.cpp  hash.hh  main.cpp  message.cpp  message.hh
test/: benchmark.cpp  test.cpp  test.hh
